--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "material-ui": "^0.19.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2"
