--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.19.3",
     "react": "^16.0.0",
