able to add markers to map from user search -- still needs address dropdown functionality

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-google-autocomplete": "^1.0.15",
     "react-google-map": "^3.1.1",
     "react-google-maps-loader": "^4.1.0",
     "react-redux": "^5.0.6",
