--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
+    "throttle-debounce": "^1.0.1",
     "yarn": "^1.3.2"
   },
   "scripts": {
