--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.19.3",
+    "moment": "^2.22.1",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
     "react": "^16.0.0",
