--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.9",
+    "react-fontawesome": "^1.6.1",
     "react-google-autocomplete": "^1.0.15",
     "react-google-map": "^3.1.1",
     "react-google-maps-loader": "^4.1.0",
