--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "moment": "^2.22.1",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.4.1",
     "react-dropzone": "^4.2.9",
     "react-fontawesome": "^1.6.1",
     "react-google-autocomplete": "^1.0.15",
