--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.2",
         "react-scripts": "1.0.14",
+        "react-toastify": "^4.1.0",
         "reactstrap": "^6.2.0",
         "redux": "^3.7.2",
         "throttle-debounce": "^1.0.1",
