--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
         "build": "npm-run-all build-css build-js",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
+    },
+    "devDependencies": {
+        "babel-jest": "^23.6.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-react": "^6.24.1",
+        "jest": "^23.6.0",
+        "react-test-renderer": "^16.6.0"
     }
 }
