--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-toastify": "^4.1.0",
         "reactstrap": "^6.2.0",
         "redux": "^3.7.2",
+        "redux-saga": "^0.16.2",
         "throttle-debounce": "^1.0.1",
         "yarn": "^1.3.2"
     },
