--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-toastify": "^4.1.0",
         "reactstrap": "^6.2.0",
         "redux": "^3.7.2",
+        "redux-saga": "^0.16.2",
         "throttle-debounce": "^1.0.1",
         "yarn": "^1.3.2"
     },
@@ -36,5 +37,12 @@
         "build": "npm-run-all build-css build-js",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
+    },
+    "devDependencies": {
+        "babel-jest": "^23.6.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-react": "^6.24.1",
+        "jest": "^23.6.0",
+        "react-test-renderer": "^16.6.0"
     }
 }
