--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "react-google-maps-loader": "^4.1.0",
         "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.2",
-        "react-scripts": "1.0.14",
+        "react-scripts": "^2.1.3",
         "react-toastify": "^4.1.0",
         "reactstrap": "^6.2.0",
         "redux": "^3.7.2",
