--- a/package.json
+++ b/package.json
@@ -1,48 +1,54 @@
 {
-    "name": "homereact",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "axios": "^0.16.2",
-        "google-maps-react": "^1.1.2",
-        "lodash": "^4.17.4",
-        "material-design-icons": "^3.0.1",
-        "material-ui": "^0.19.3",
-        "moment": "^2.22.1",
-        "node-sass-chokidar": "^0.0.3",
-        "npm-run-all": "^4.1.2",
-        "react": "^16.4.1",
-        "react-dom": "^16.4.1",
-        "react-dropzone": "^4.2.9",
-        "react-fontawesome": "^1.6.1",
-        "react-google-autocomplete": "^1.0.15",
-        "react-google-map": "^3.1.1",
-        "react-google-maps-loader": "^4.1.0",
-        "react-redux": "^5.0.6",
-        "react-router-dom": "^4.2.2",
-        "react-scripts": "^2.1.3",
-        "react-toastify": "^4.1.0",
-        "reactstrap": "^6.2.0",
-        "redux": "^3.7.2",
-        "redux-saga": "^0.16.2",
-        "throttle-debounce": "^1.0.1",
-        "yarn": "^1.3.2"
-    },
-    "scripts": {
-        "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-        "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-        "start-js": "react-scripts start",
-        "start": "npm-run-all -p watch-css start-js",
-        "build-js": "react-scripts build",
-        "build": "npm-run-all build-css build-js",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    },
-    "devDependencies": {
-        "babel-jest": "^23.6.0",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-react": "^6.24.1",
-        "jest": "^23.6.0",
-        "react-test-renderer": "^16.6.0"
-    }
+  "name": "homereact",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "axios": "^0.16.2",
+    "google-maps-react": "^1.1.2",
+    "lodash": "^4.17.4",
+    "material-design-icons": "^3.0.1",
+    "material-ui": "^0.19.3",
+    "moment": "^2.22.1",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.1.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-dropzone": "^4.2.9",
+    "react-fontawesome": "^1.6.1",
+    "react-google-autocomplete": "^1.0.15",
+    "react-google-map": "^3.1.1",
+    "react-google-maps-loader": "^4.1.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^2.1.3",
+    "react-toastify": "^4.1.0",
+    "reactstrap": "^6.2.0",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.2",
+    "throttle-debounce": "^1.0.1",
+    "yarn": "^1.3.2"
+  },
+  "scripts": {
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.6.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
