--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "google-maps-react": "^1.1.2",
     "lodash": "^4.17.11",
     "material-design-icons": "^3.0.1",
