--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^3.9.3",
         "axios": ">=0.18.1",
         "google-maps-react": "^1.1.2",
         "lodash": "^4.17.11",
         "material-design-icons": "^3.0.1",
         "material-ui": "^0.19.3",
-        "@material-ui/core": "^3.9.3",
         "moment": "^2.22.1",
         "node-sass-chokidar": "^0.0.3",
         "npm-run-all": "^4.1.2",
@@ -43,6 +43,8 @@
         "babel-jest": "^23.6.0",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
+        "enzyme": "^3.10.0",
+        "enzyme-adapter-react-16": "^1.14.0",
         "jest": "^23.6.0",
         "querystringify": ">=2.0.0",
         "react-test-renderer": "^16.6.0"
