--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-google-autocomplete": "^1.0.15",
     "react-google-map": "^3.1.1",
     "react-google-maps-loader": "^4.1.0",
-    "react-redux": "^5.0.6",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^2.1.8",
     "react-toastify": "^4.1.0",
@@ -41,6 +41,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.0.4",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
