--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "@material-ui/core": "^3.9.3",
     "antd": "^4.4.2",
     "axios": ">=0.18.1",
+    "bootstrap-daterangepicker": "^3.1.0",
     "google-maps-react": "^1.1.2",
+    "hellosign-embedded": "^2.9.0",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.11",
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.19.3",
-    "moment": "^2.22.1",
+    "moment": "^2.29.1",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
-    "react": "^16.8.6",
+    "prop-types": "^15.7.2",
+    "react": "^16.14.0",
+    "react-bootstrap-daterangepicker": "^7.0.0",
     "react-dom": "^16.8.6",
     "react-dropzone": "^4.2.9",
     "react-fontawesome": "^1.6.1",
@@ -33,22 +38,25 @@
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
+    "start-js": "react-app-rewired start",
+    "build-js": "react-app-rewiredbuild",
     "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@testing-library/react": "^11.0.4",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "customize-cra": "^1.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^23.6.0",
     "querystringify": ">=2.0.0",
+    "react-app-rewired": "^2.1.8",
     "react-test-renderer": "^16.6.0"
   },
   "browserslist": [
