--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "homereact",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=12.19.0",
+    "npm": ">=6.0.0"
+},
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "antd": "^4.4.2",
@@ -36,7 +40,7 @@
     "yarn": "^1.3.2"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "build-css": "npm rebuild node-sass node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start-js": "react-app-rewired start",
     "build-js": "react-app-rewired build",
